--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,278 +1,253 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-}
-
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo,
-.thirteen {
-  position: relative;
-}
-
-.thirteen {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 75px;
-  height: 75px;
-  padding: 25px 10px;
-  margin-left: 16px;
-  transform: translateZ(0);
-  border-radius: var(--border-radius);
-  overflow: hidden;
-  box-shadow: 0px 2px 8px -1px #0000001a;
-}
-
-.thirteen::before,
-.thirteen::after {
-  content: '';
-  position: absolute;
-  z-index: -1;
-}
-
-/* Conic Gradient Animation */
-.thirteen::before {
-  animation: 6s rotate linear infinite;
-  width: 200%;
-  height: 200%;
-  background: var(--tile-border);
-}
-
-/* Inner Square */
-.thirteen::after {
-  inset: 0;
-  padding: 1px;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    to bottom right,
-    rgba(var(--tile-start-rgb), 1),
-    rgba(var(--tile-end-rgb), 1)
-  );
-  background-clip: content-box;
-}
-
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+  .container{
+    width: 25%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: #1f2630;
+    border-radius: 20px;
+    padding: 20px;
+  }
+  .conWra{
+    padding: 10px;
   }
 
-  .card:hover span {
-    transform: translateX(4px);
-  }
-}
-
-@media (prefers-reduced-motion) {
-  .thirteen::before {
-    animation: none;
+  .imgWrapper{
+    background-color: #272e35;
+    padding: 10px;
+    width: 17px;
+    height: 17px;
+    border-radius: 50%;
   }
 
-  .card:hover span {
-    transform: none;
-  }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
+  .wrapper h4{
+    color: #E9E9EC;
+    padding: 22px;
+    padding-left: 0;
+    font-size: 25px;
   }
 
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
+  .wrapper p{
+    width: 90%;
+    font-size: 16px;
+    line-height: 27px;
+    color: #545A64;
+  }
+
+  .numebrs{
+    display: flex;
+    margin-top: 20px;
+    gap: 22px;
+  }
+
+  .numebrs .div1,.div2,.div3,.div4,.div5{
+  
+    border: none;
+    background-color: #272e35;
+    font-size: 20px;
+    color: #545A64;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    
+  }
+
+  .container .submit{
+    width: 95%;
+    cursor: pointer;
+    margin-top: 25px;
+    border: none;
+    border-radius: 40px;
+    height: 40px;
+    background-color: #FC7613;
+    color: white;
+    font-size: 16px;
+    letter-spacing: 2px;
     text-align: center;
   }
 
-  .card {
-    padding: 1rem 2.5rem;
+  .div1:hover{
+    background-color: #7c8898 ;
+  }
+  .div2:hover{
+    background-color: #7c8898 ;
+  }
+  .div3:hover{
+    background-color: #7c8898 ;
+  }
+  .div4:hover{
+    background-color: #7c8898 ;
+  }
+  .div5:hover{
+    background-color: #7c8898 ;
   }
 
-  .card h2 {
-    margin-bottom: 0.5rem;
+  .div1:focus{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
   }
 
-  .center {
-    padding: 8rem 0 6rem;
+  .div2:focus{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
   }
 
-  .center::before {
-    transform: none;
-    height: 300px;
+  .div3:focus{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
   }
 
-  .description {
-    font-size: 0.8rem;
+  .div4:focus{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
   }
 
-  .description a {
-    padding: 1rem;
+  .div5:focus{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
   }
 
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
+
+  .div1:active{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
+  }
+  .div2:active{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
+  }
+  .div3:active{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
+  }
+  .div4:active{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
+  }
+  .div5:active{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
   }
 
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
+
+  .div1:visited{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
+  }
+  .div2:visited{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
+  }
+  .div3:visited{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
+  }
+  .div4:visited{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
+  }
+  .div5:visited{
+    background-color: #FC7613;
+    color: white;
+    outline: none;
   }
 
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
-  }
-}
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
-  }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
+  .submit:hover{
+    background-color: #ffffff;
+    color: #FC7613;
   }
 
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
 
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
+
+
+  /* after rating */
+
+  .ratContainer{
+    text-align: center;
+    padding: 10px;
   }
-  to {
-    transform: rotate(0deg);
+
+  .ratWrapper{
+  
   }
-}
+  .showNumber{
+    padding: 10px ;
+    width: 50%;
+    margin:auto;
+    border-radius: 30px;
+    margin-top: 40px;
+    height: 15px;
+    text-align: center;
+    color: #FC7613;
+    background-color: #2b2c32;
+  }
+
+  .ratContainer h3{
+    color: white;
+    margin-top: 50px;
+    font-size: 30px;
+  }
+
+  .ratContainer .para{
+    color: white;
+    margin-top: 15px;
+    line-height: 27px;
+  }
+
+
+
+  @media screen and (min-width:1026px)and (max-width:1200px) {
+    .container{
+      width: 32%;
+    }
+  }
+
+
+  @media screen and (min-width:800px)and (max-width:1026px) {
+    .container{
+      width: 36%;
+    }
+  }
+
+
+  @media screen and (min-width:650px) and (max-width:800px) {
+    .container{
+      width: 50%;
+    }
+  }
+
+  @media screen and (min-width:500px) and (max-width:650px) {
+    .container{
+      width: 55%;
+    }
+  }
+
+  @media screen and (min-width:400px) and (max-width:500px) {
+    .container{
+      width: 65%;
+    }
+  }
+  @media screen  and (max-width:400px) {
+    .container{
+      width: 80%;
+    }
+  }
